# Dont-Worry-Be-Happy

./: .gitignore  dont-worry-be-happy.cabal  flake.nix
app/arith/: Lexer.hs  Lexer.x  Parser.hs  Parser.y
app/basic/: Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y
app/basic-no-wrapper/: Lexer.hs  Lexer.x  Parser.hs  Parser.y
app/error-handling/: Error.hs  Lexer.x  Main.hs  Parser.hs  Parser.y
app/monadic/: Error.hs  Main.hs  Parser.hs
app/monadic/Parser/: Grammar.hs  Grammar.y  Lexer.hs  Lexer.x  Monad.hs  Spans.hs  Token.hs
app/source-spans/: Lexer.x  Main.hs  Parser.hs  Parser.y  Span.hs
