cabal-version:      2.4
name:               dont-worry-be-happy
version:            0.1.0.0
synopsis:           Happy parsing examples
bug-reports:        http://www.github.com/ssbothwell/dont-worry-be-happy
license:
author:             ssbothwell
maintainer:         ssbothwell@gmail.com
category:           Parsing


executable arith
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , array
    hs-source-dirs:   app/arith
    default-language: Haskell2010
    other-modules:    Lexer
                    , Parser

executable basic
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , array
    hs-source-dirs:   app/basic
    default-language: Haskell2010
    other-modules:    Lexer
                    , Parser

executable source-spans
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , array
                    , mtl
    hs-source-dirs:   app/source-spans
    default-language: Haskell2010
    other-modules:    Lexer
                    , Parser

executable error-handling
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , array
    hs-source-dirs:   app/error-handling
    default-language: Haskell2010
    other-modules:    Error
                    , Lexer
                    , Parser